--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ out/
 *.swp
 /1FundamentosJavaApache/Tarea1Java/nbproject/private/
 /1FundamentosJavaApache/HolaMundoJava/dist/
+/1FundamentosJavaApache/Aritmetica/nbproject/private/
