Ejercicio: Calculo de volumen de cubo

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ out/
 /1FundamentosJavaApache/Tarea1Java/nbproject/private/
 /1FundamentosJavaApache/HolaMundoJava/dist/
 /1FundamentosJavaApache/Aritmetica/nbproject/private/
+/1FundamentosJavaApache/ProyectoCaja/nbproject/private/
